Print Exceptions in Output class, PushBackLexer with LinkedList